--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/core": "^4.0.1",
     "@angular/http": "^4.0.1",
     "@angular/material": "^2.0.0-beta.2",
+    "@angular/platform-browser": "^4.0.1",
     "rxjs": "^5.0.1",
     "typescript": "^2.2.2",
     "zone.js": "^0.8.5"
