--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@angular/common": "^4.0.1",
     "@angular/core": "^4.0.1",
+    "@angular/forms": "^4.0.1",
     "@angular/http": "^4.0.1",
     "@angular/material": "^2.0.0-beta.2",
     "@angular/platform-browser": "^4.0.1",
