--- a/package.json
+++ b/package.json
@@ -26,9 +26,7 @@
     "@angular/platform-browser": "^4.0.1",
     "rxjs": "^5.0.1",
     "typescript": "^2.2.2",
-    "zone.js": "^0.8.5"
-  },
-  "peerDependencies": {
-    "reflect-metadata": "^0.1.10"
+    "zone.js": "^0.8.5", 
+    "reflect-metadata" :"0.1.10"
   }
 }
